--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@
 #es-rc #es-rc-content .es-kv__text--right-3 {
   top: auto;
   bottom: 10%;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   text-transform: none;
   background-color: #b5d4f0;
@@ -143,6 +143,7 @@
 }
 #es-rc #es-rc-content .es-benefits__single {
   display: flex;
+  align-items: flex-start;
   margin: 15px 10px;
   align-items: center;
 }
@@ -445,10 +446,10 @@
   }
   #es-rc #es-rc-content .es-kv__text--right {
     font-size: 28px;
-    width: 68%;
+    width: 83%;
   }
   #es-rc #es-rc-content .es-kv__text--right-1 {
-    top: 35%;
+    top: 45%;
     font-size: 18px;
     left: -50%;
   }
@@ -458,8 +459,8 @@
     left: -50%;
   }
   #es-rc #es-rc-content .es-kv__text--right-3 {
-    bottom: 6%;
-    font-size: 15px;
+    bottom: 25%;
+    font-size: 11px;
     left: -50%;
   }
   #es-rc #es-rc-content .es-packshot {
@@ -1031,8 +1032,8 @@
     font-size: 16px;
   }
   #es-rc #es-rc-content .es-kv__text--right-3 {
-    bottom: 10%;
-    font-size: 18px;
+    bottom: 25%;
+    font-size: 14px;
   }
   #es-rc #es-rc-content .es-duo--left {
     width: 50%;
@@ -1065,8 +1066,8 @@
     font-size: 16px;
   }
   #es-rc #es-rc-content .es-kv__text--right-3 {
-    bottom: 10%;
-    font-size: 16px;
+    bottom: 25%;
+    font-size: 15px;
   }
   #es-rc #es-rc-content .es-duo--left--text--wrapper {
     margin-top: 40px;
@@ -1084,8 +1085,9 @@
     width: 80%;
   }
   #es-rc #es-rc-content .es-kv__text--right-3 {
-    bottom: 20%;
-    left: -56%;
+    bottom: 30%;
+    left: -55%;
+    width: 68%;
   }
 }
 @media screen and (min-width: 1200px) {
