--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,7 +145,7 @@
   display: flex;
   align-items: flex-start;
   margin: 15px 10px;
-  align-items: center;
+  -webkit-box-align: center;
 }
 #es-rc #es-rc-content .es-benefits__single:nth-child(1) {
   max-width: 295px;
